@@ -491,7 +491,7 @@
 		  <widget>
 		    <class>GtkLabel</class>
 		    <name>label_cpu_throttling_</name>
-		    <label>Throt.: </label>
+		    <label>Thro.: </label>
 		    <justify>GTK_JUSTIFY_CENTER</justify>
 		    <wrap>False</wrap>
 		    <xalign>0</xalign>
