@@ -1,4 +1,4 @@
-// generated 2002/12/18 11:00:14 CET by thoma@Tiger.(none)
+// generated 2002/12/18 16:15:38 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -34,7 +34,7 @@ gtk_acpi_glade::gtk_acpi_glade(
    Gtk::Label *label1 = manage(new class Gtk::Label(""));
    label_temp = manage(new class Gtk::Label("label4"));
    
-   Gtk::Label *label_cpu_throttling_ = manage(new class Gtk::Label("Throt.: "));
+   Gtk::Label *label_cpu_throttling_ = manage(new class Gtk::Label("Thro.: "));
    label_cpu_throttling = manage(new class Gtk::Label("label3"));
    
    Gtk::HBox *hbox1 = manage(new class Gtk::HBox(false, 0));
