@@ -175,3 +175,6 @@
 
 2002/12/18 11:00:14 CET
 	update files from .glade file
+
+2002/12/18 16:15:38 CET
+	update files from .glade file
